<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>
    <groupId>br.ufes.willcq</groupId>
    <artifactId>scpods-backend</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>CadastroProjetosODSBackend</name>
    <description>Backend do sistema para cadastro de projetos relacionados aos ODS na UFES.</description>
    <properties>
        <java.version>21</java.version>
    </properties>
    <dependencies>

        <!-- Add-on module for Jackson (http://jackson.codehaus.org) to support JTS geometry types
        using the GeoJSON standard. -->
        <dependency>
            <groupId>com.graphhopper.external</groupId>
            <artifactId>jackson-datatype-jts</artifactId>
            <version>2.14</version>
        </dependency>

        <!-- Suport for spatial datatypes -->
        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-spatial -->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-spatial</artifactId>
            <version>6.4.4.Final</version>
        </dependency>

        <!-- Suport for access the postgreSQL database -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Autogenerated constructors, getters and setters -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
            <version>3.0.0</version>
        </dependency>

        <!-- Suport for Java Persistence API -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- Suport for rest related annotations -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- TODO: DEPENDÊNCIA PARA CRIAÇÃO DE DOCUMENTAÇÃO -->
        <!-- 
            <dependency>
                <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-ui</artifactId>
                <version>${swagger.version}</version>
        </dependency>
        -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>